# pose_detection

./: .gitignore  PROJECT_STATUS.md  README.md  app.py  mypose_baoshan1.py  mypose_shangtichang2.py  pyproject.toml  regions_baoshan1.json  requirements.txt
data/: regions_baoshan.json  regions_jingansi.json  regions_linping.json  regions_longhuazhong.json  regions_pudongdadao.json  regions_shangtichang.json  regions_shangtichang2.json  regions_tangqiao.json
docs/: DETECTION_LOGIC.md  PROJECT_STATUS.md  report_template.md  动作规范.docx
scripts/: profile_timing.py  run_baoshan.py  run_baoshan1.py  run_jingansi.py  run_linping.py  run_longhuazhong.py  run_pudongdadao.py  run_pudongdadao_test.py  run_shangtichang.py  run_shangtichang2.py  run_tangqiao.py
src/: analyzer.py  annotation.py  confidence_color.py  config.py  detection.py  detector.py  geometry.py  player.py  reporter.py  state_machine.py  train_detector.py  visualization.py
static/: progress.json
