[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pose-detection"
version = "0.1.0"
description = "基于YOLO姿态估计的列车司机动作识别系统"
requires-python = ">=3.10"
dependencies = [
    "ultralytics>=8.4.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "Pillow>=9.0.0",
    "torch>=2.0.0",
]
